# ZNO

./: CMakeLists.txt  README.md  meson.build
code/: about.cpp  array.h  audio.h  audio_impl_portaudio.cpp  audio_impl_wasapi.cpp  builtin_layouts.h  decoder.cpp  decoder.h  defines.h  drag_drop.h  filenames.cpp  filenames.h  font_awesome.h  layout.cpp  layout.h  layouts.h  library.cpp  library.h  main.cpp  main.h  media_controls.cpp  media_controls.h  metadata.cpp  metadata.h  os.cpp  os.h  os_linux.cpp  platform.cpp  platform.h  platform_linux.cpp  platform_windows.cpp  playback.cpp  playback.h  playback_analysis.cpp  playback_analysis.h  playlist.cpp  playlist.h  preferences.h  taglib_file_name_workaround.cpp  taglib_file_name_workaround.h  (+12 more)
