project('zno', ['cpp', 'c'], default_options : [
    'c_std=c11', 
    'cpp_std=c++11',
    'warning_level=2',
])

src = [
    'code/about.cpp',
    'code/array.h',
    'code/audio.h',
    'code/builtin_layouts.h',
    'code/decoder.cpp',
    'code/decoder.h',
    'code/defines.h',
    'code/drag_drop.h',
    'code/filenames.cpp',
    'code/filenames.h',
    'code/font_awesome.h',
    'code/layout.cpp',
    'code/layout.h',
    'code/library.cpp',
    'code/library.h',
    'code/main.cpp',
    'code/main.h',
    'code/media_controls.cpp',
    'code/media_controls.h',
    'code/metadata.cpp',
    'code/metadata.h',
    'code/os.h',
    'code/platform.h',
    'code/playback.cpp',
    'code/playback.h',
    'code/playback_analysis.cpp',
    'code/playback_analysis.h',
    'code/playlist.cpp',
    'code/playlist.h',
    'code/preferences.cpp',
    'code/preferences.h',
    'code/taglib_file_name_workaround.cpp',
    'code/taglib_file_name_workaround.h',
    'code/theme.cpp',
    'code/theme.h',
    'code/thirdparty/ini.c',
    'code/thirdparty/ini.h',
    'code/thirdparty/stb_image.c',
    'code/thirdparty/stb_image.h',
    'code/thirdparty/stb_image_write.h',
    'code/thirdparty/xxhash.c',
    'code/thirdparty/xxhash.h',
    'imgui/imgui_demo.cpp',
    'imgui/imgui_draw.cpp',
    'imgui/imgui_tables.cpp',
    'imgui/imgui_widgets.cpp',
    'imgui/imgui.cpp',
    'imgui/backends/imgui_impl_opengl3.cpp',
    'imgui/backends/imgui_impl_glfw.cpp',
    'code/ui.cpp',
    'code/ui.h',
    'code/ui_custom.cpp',
    'code/ui_functions.cpp',
    'code/ui_functions.h',
    'code/util.h',
    'code/video.h',
    'code/platform_linux.cpp',
    'code/os_linux.cpp',
    'code/video_gl.cpp',
    'code/audio_impl_portaudio.cpp',
]

includes = [
    'code/thirdparty',
    'imgui',
]

deps = [
    dependency('gl'),
    dependency('taglib'),
    dependency('taglib_c'),
    dependency('glfw3'),
    dependency('sndfile'),
    dependency('portaudio-2.0'),
    dependency('samplerate'),
]

zno = executable('zno', src, include_directories : includes, dependencies : deps)
